--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "ndjson": "^2.0.0",
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
